--- a/facultad/PresentacionSypa/css/styleSistOrg.css
+++ b/facultad/PresentacionSypa/css/styleSistOrg.css
@@ -99,7 +99,7 @@ main section {
     align-items: center;
 }
 
-.desarrollo ol li {
+.desarrollo ul li {
     padding-top: 10px;
     padding-bottom: 10px;
     font-weight: 600;
